# gedcomx-rust

./: Cargo.toml  README.md
gedcomx-model/: Cargo.toml
gedcomx-model/assets/data/: emma-bocock.json  emma-bocock.xml
gedcomx-model/src/: gedcomx.rs  lib.rs
gedcomx-model/src/agent/: agent.rs
gedcomx-model/src/common/: evidence_reference.rs  mod.rs  qname_uri.rs  reference.rs  resource_reference.rs  text_value.rs  uri.rs
gedcomx-model/src/conclusion/: conclusion.rs  date.rs  document.rs  fact.rs  mod.rs  name.rs  name_form.rs  person.rs  place_reference.rs  relationship.rs  subject.rs
gedcomx-model/src/gedcomx/: attribution.rs  gedcomx.rs  mod.rs
gedcomx-model/src/ser/: error.rs  mod.rs  serialize_xml.rs  xml.rs
gedcomx-model/src/source/: mod.rs  source_citation.rs  source_description.rs  source_reference.rs
gedcomx-model/src/types/: fact_type.rs  gender.rs  mod.rs  name.rs  name_type.rs  relationship.rs  resource.rs
gedcomx-model/tests/: emma_bocock_example.rs
gedcomx-model/tests/api/: common.rs  conclusions.rs  main.rs  ser_and_deser.rs
libs/deserx/: Cargo.toml
libs/deserx/src/: lib.rs
libs/deserx/src/de/: deserializex.rs  mod.rs
