[package]
name = "gedcomx-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
deserx = { version = "0.1.0", path = "../libs/deserx" }
log = "0.4.17"
oxiri = { version = "0.2.2", features = ["serde"] }
quick-xml = { version = "0.26.0", features = ["serialize"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_with = { version = "2.0.1", features = ["chrono_0_4"] }

[dev-dependencies]
env_logger = "0.9.1"
